# evmora-evm

./: .gitignore  Cargo.toml  EXECUTION_VERIFICATION_REPORT.md  FINAL_VERIFICATION.md  GRANT_APPLICATION_GUIDE.md  GRANT_PROPOSAL.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PHASE_3_COMPLETE.md  README.md  TESTING.md  TEST_VALIDATION_SUMMARY.md  WALKTHROUGH.md  test_all_backends.ps1  test_all_languages.ps1  test_all_vms.ps1  test_token.move  test_token.ql  test_token.sol  test_token.vy  test_vulnerable.sol
Documentations/: ALL_LANGUAGES_COMPLETE.md  AUDIT_REPORT.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_SYSTEM.md  EXECUTIVE_SUMMARY.md  FINAL_SUMMARY.md  GRANT_PROPOSAL.md  GRANT_READY_CONFIRMATION.md  IMPLEMENTATION_COMPLETE.md  PHASE_2_COMPLETE.md  PRODUCTION_IMPLEMENTATION_PLAN.md  PRODUCTION_READINESS.md  PROGRESS_REPORT.md  QUICK_REFERENCE.md  README_GRANT.md  SEMANTIC_ANALYSIS_IMPLEMENTED.md  TESTING.md  VM_IMPLEMENTATION_COMPLETE.md  VM_IMPLEMENTATION_TEST_SUMMARY.md  test_execution.ps1  test_polkadot.ql  test_vulnerable.ql
crates/evmora-aptos-vm/: Cargo.toml
crates/evmora-aptos-vm/src/: lib.rs
crates/evmora-bridge/: Cargo.toml
crates/evmora-bridge/src/: lib.rs
crates/evmora-bridge/src/adapters/: ethereum.rs  mod.rs  polygon.rs
crates/evmora-bridge/src/proof/: merkle.rs
crates/evmora-bridge/src/tokens/: erc1155.rs  erc20.rs  erc721.rs  mod.rs
crates/evmora-compiler/: Cargo.toml
crates/evmora-compiler/examples/: e2e_testing.rs  multilang_compile.rs
crates/evmora-compiler/src/: codegen.rs  codegen_move.rs  codegen_wasm.rs  ir.rs  lib.rs  optimizer.rs  parser.rs  yul.rs
crates/evmora-compiler/src/frontends/: mod.rs  move_lang.rs  move_semantics.rs  quorlin.rs  solidity.rs  solidity_semantics.rs  traits.rs  vyper.rs  vyper_semantics.rs
crates/evmora-compiler/src/semantics/: analyzer.rs  ast.rs  backend.rs  mod.rs  security_analyzer.rs  symbol_table.rs  type_checker.rs  types.rs  validator.rs
crates/evmora-compiler/tests/: bridge_tests.rs
crates/evmora-core/: Cargo.toml
crates/evmora-core/benches/: opcodes.rs
crates/evmora-core/src/: lib.rs
crates/evmora-core/src/evm/: context.rs  executor.rs  memory.rs  mod.rs  opcodes.rs  opcodes_extended.rs  stack.rs  storage.rs
crates/evmora-core/src/gas/: calculator.rs  mod.rs  optimizer.rs  schedules.rs
crates/evmora-core/src/precompiles/: ecrecover.rs  mod.rs  sha256.rs
crates/evmora-core/src/types/: transaction.rs
crates/evmora-plugins/: Cargo.toml
crates/evmora-plugins/src/: gas.rs  lib.rs  manager.rs  registry.rs  storage.rs  traits.rs
crates/evmora-polkadot-vm/: Cargo.toml
crates/evmora-polkadot-vm/src/: lib.rs
crates/evmora-quorlin-vm/: Cargo.toml
crates/evmora-quorlin-vm/src/: lib.rs
crates/evmora-runtime/: Cargo.toml
crates/evmora-runtime/benches/: execution_bench.rs
crates/evmora-runtime/examples/: basic_contract.rs
crates/evmora-runtime/src/: client.rs  contracts.rs  deployment.rs  lib.rs  parallel.rs  state.rs  transaction.rs
crates/evmora-runtime/tests/: e2e_multilang.rs  e2e_workflow_verified.rs  evm_compliance.rs  parallel_exec.rs
crates/evmora-solana-vm/: Cargo.toml
crates/evmora-solana-vm/src/: lib.rs
crates/evmora-utils/: Cargo.toml
crates/evmora-utils/src/: config.rs  crypto.rs  errors.rs  lib.rs  serialization.rs
docs/: ARCHITECTURE.md
examples/: cross_chain_bridge.rs  parallel_execution.rs
tests/: opcode_implementation_tests.rs  test_all_vms.rs  test_deployment.rs  test_execution.rs
tests/fixtures/contracts/: QuorlinToken.vy  Token.sol  adder.hex  basic_coin.move  counter.vy  pallet_quorlin_token.rs  quorlin_token.move  quorlin_token.rs  token.ql
tests/fixtures/move/: Counter.move
tests/fixtures/ql/: Counter.ql
tests/fixtures/sol/: Counter.sol
tests/fixtures/transactions/: tx_1.json
tests/fixtures/vy/: Counter.vy
