[workspace]
members = [
    "crates/evmora-core",
    "crates/evmora-bridge",
    "crates/evmora-plugins",
    "crates/evmora-compiler",
    "crates/evmora-runtime",
    "crates/evmora-utils",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
primitive-types = "0.12"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.5"
sha3 = "0.10"
criterion = "0.5"
async-trait = "0.1"
clap = { version = "4.4", features = ["derive"] }
config = "0.13"
tempfile = "3.8"
rand = "0.8"
rayon = "1.8"
parking_lot = "0.12"
ahash = "0.8"
secp256k1 = { version = "0.28", features = ["recovery", "global-context"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
