[package]
name = "evmora-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
evmora-core = { path = "../evmora-core" }
evmora-utils = { path = "../evmora-utils" }
evmora-plugins = { path = "../evmora-plugins" }
primitive-types = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
