[package]
name = "evmora-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
evmora-core = { path = "../evmora-core" }
evmora-utils = { path = "../evmora-utils" }
anyhow = { workspace = true }
serde = { workspace = true }
primitive-types = { workspace = true }
hex = { workspace = true }
regex = "1.12.2"
tokio = { workspace = true, features = ["full"] }
