[package]
name = "evmora-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
evmora-utils = { path = "../evmora-utils" }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
primitive-types = { workspace = true }
hex = { workspace = true }
regex = "1.12.2"
tokio = { workspace = true, features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }

[[bin]]
name = "evmora-compiler"
path = "src/bin/main.rs"
